--- a/app/views/psd-revised-flow/add-new-product/edit-product-information-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/edit-product-information-bl.html
@@ -33,7 +33,7 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
         <div class="govuk-form-group">
           <label class="govuk-label" for="trading_name">Brand name (mandatory)</label>
           <div class="govuk-hint govuk-!-font-size-16" id="trading_name-hint">For example, ‘Dyson’ or ‘Sony’.</div>
-          <input class="govuk-input govuk-!-width-two-thirds" id="business-details-trading_name" name="business-details-trading_name" type="text" aria-describedby="trading_name-hint" value="Bosch">
+          <input class="govuk-input govuk-!-width-two-thirds" id="brand-name" name="brand-name" type="text" aria-describedby="trading_name-hint" value="{{ data['brand-name'] }}">
         </div>
 
         <div class="govuk-form-group">
