--- a/app/views/psd-revised-flow/add-new-product/add-product-information-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/add-product-information-bl.html
@@ -26,6 +26,7 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
       </div>
   </div>
 
+
  <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
@@ -40,13 +41,13 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
         <div class="govuk-form-group">
           <label class="govuk-label" for="trading_name">Brand name (mandatory)</label>
           <div class="govuk-hint govuk-!-font-size-16" id="trading_name-hint">For example, ‘Dyson’ or ‘Sony’.</div>
-          <input class="govuk-input govuk-!-width-two-thirds" id="business-details-trading_name" name="business-details-trading_name" type="text" aria-describedby="trading_name-hint" value="Bosch">
+          <input class="govuk-input govuk-!-width-two-thirds" id="brand-name" name="brand-name" type="text" aria-describedby="trading_name-hint" value="{{ data['brand-name'] }}">
         </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="trading_name">Product name (mandatory)</label>
           <div class="govuk-hint govuk-!-font-size-16" id="trading_name-hint">Include model name and number, for example ‘PlayStation 5’.</div>
-          <input class="govuk-input govuk-!-width-two-thirds" id="business-details-trading_name" name="business-details-trading_name" type="text" aria-describedby="trading_name-hint" value="Series 6 WGG24409GB">
+          <input class="govuk-input govuk-!-width-two-thirds" id="product-name" name="product-name" type="text" aria-describedby="trading_name-hint" value="{{ data['product-name'] }}">
         </div>
 
         <div class="govuk-form-group" id="select-form-group-2">
@@ -96,8 +97,7 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
         <div class="govuk-form-group">
           <label class="govuk-label" for="trading_name">Description of product</label>
           <div class="govuk-hint govuk-!-font-size-16" id="trading_name-hint">Details about the product you haven't included above. For example, colour, size, packaging description. Do not include details of damage or incidents.</div>
-          <textarea class="govuk-textarea" id="more-detail" name="moreDetail" rows="5" aria-describedby="more-detail-hint">Free 5 Year Warranty! (Via Registration) Capacity 9kg 1400rpm Anti Stain Active Water Plus Eco Silence Drive Speed Perfect LED Display Colour: White With Black Door Energy Rating (A-G): AH848 x W598 x D590 mm.
-          </textarea>
+          <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint" >{{ data['more-detail'] }}</textarea>
         </div>
 
         <div class="govuk-form-group">
@@ -154,7 +154,7 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="trading_name">Webpage</label>
-          <input class="govuk-input govuk-!-width-full" id="business-details-trading_name" name="business-details-trading_name" type="text" aria-describedby="trading_name-hint" value="">
+          <input class="govuk-input govuk-!-width-full" id="webpage" name="webpage" type="text" aria-describedby="trading_name-hint" value="">
         </div>
         
 
@@ -451,7 +451,7 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
           <div class="govuk-form-group">
             <label class="govuk-label" for="trading_name">Product subcategory (mandatory)</label>
             <div class="govuk-hint govuk-!-font-size-16" id="trading_name-hint">For example, 'Face mask' or 'Washing machine'.</div>
-            <input class="govuk-input govuk-!-width-two-thirds" id="business-details-trading_name" name="business-details-trading_name" type="text" aria-describedby="trading_name-hint" value="Home & Garden > Household Appliances > Laundry Appliances > Washing Machines">
+            <input class="govuk-input govuk-!-width-two-thirds" id="product-subcategory" name="product-subcategory" type="text" aria-describedby="trading_name-hint" value="{{ data['product-subcategory'] }}">
           </div>
 
       </fieldset>
@@ -464,13 +464,13 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
         <div class="govuk-form-group">
           <label class="govuk-label" for="trading_name">Barcode number (GTIN, EAN or UPC)</label>
           <div class="govuk-hint govuk-!-font-size-16" id="trading_name-hint">Normally 8, 12, or 13 digits</div>
-          <input class="govuk-input govuk-!-width-two-thirds" id="business-details-trading_name" name="business-details-trading_name" type="text" aria-describedby="trading_name-hint" value="9 324652 876225">
+          <input class="govuk-input govuk-!-width-two-thirds" id="barcode" name="barcode" type="text" aria-describedby="trading_name-hint" value="{{ data['barcode'] }}">
         </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="trading_name">Other product identifiers</label>
           <div class="govuk-hint govuk-!-font-size-16" id="trading_name-hint">For example, serial number, Amazon ID (ASIN) or eBay ID. Use a comma to separate multiple identifiers, and a hyphen to indicate ranges.</div>
-          <textarea class="govuk-textarea" id="more-detail" name="moreDetail" rows="5" aria-describedby="more-detail-hint">ASIN: 934587</textarea>
+          <textarea class="govuk-textarea" id="amazon-asin" name="amazon-asin" rows="5" aria-describedby="more-detail-hint" >{{ data['amazon-asin'] }}</textarea>
         </div>
 
       </fieldset>
@@ -485,19 +485,19 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england" >
+                <input class="govuk-radios__input" id="whereDoYouLive" name="market-date" type="radio" value="Before 1 January 2021" >
                 <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+                <input class="govuk-radios__input" id="whereDoYouLive-2" name="market-date" type="radio" value="After 1 January 2021">
                 <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
                   No
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive-4" name="whereDoYouLive" type="radio" value="northern-ireland">
+                <input class="govuk-radios__input" id="whereDoYouLive-4" name="market-date" type="radio" value="Unable to ascertain">
                 <label class="govuk-label govuk-radios__label" for="whereDoYouLive-4">
                   Unable to ascertain 
                 </label>
@@ -563,12 +563,15 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
       // Display or hide the error summary
       document.getElementById('error-summary').style.display = isError ? 'block' : 'none';
 
-      // If no errors, proceed with form submission (in this case, redirection)
-      if (!isError) {
-          window.location.href = 'product-bl';
-      } else {
-          window.location.href = '#error-summary'; // Scroll to the error summary
-      }
+// If no errors, proceed with form submission
+if (!isError) {
+    // Programmatically submit the form
+    document.getElementById('example-form').submit();
+} else {
+    // Scroll to the error summary if there are errors
+    window.location.href = '#error-summary';
+}
+
   });
 </script>
 
