--- a/app/views/psd-revised-flow/add-new-product/added-product-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/added-product-bl.html
@@ -32,9 +32,9 @@
                 <img src="../../public/images/bosch.png" alt="Image" class="table-image">
               </td>
               <td class="table-content " colspan="2">
-                <h4 class="govuk-heading-s govuk-!-margin-bottom-1">Bosch Series 6 WGG24409GB</h4>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Electricals</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Vacuum cleaner</p>
+                <h4 class="govuk-heading-s govuk-!-margin-bottom-1">{{ data['brand-name'] }}  {{ data['product-name'] }}</h4>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>{{ data['select-2'] }}</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>{{ data['product-subcategory'] }}</p>
                 <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-901</p>
               </td>
             </tr>
