--- a/app/views/psd-revised-flow/add-new-product/v1/search-products.html
+++ b/app/views/psd-revised-flow/add-new-product/v1/search-products.html
@@ -102,11 +102,12 @@
 
             <div class="govuk-summary-list__row">
               <details id="categoryDetails">
-                <summary class="summary-content govuk-!-margin-bottom-3 govuk-!-margin-top-3">
-                    <a href="#" class="govuk-link govuk-link--no-underline govuk-link--no-visited-state" onclick="toggleDetails('categoryDetails')">Category</a>
-                </summary>
-                <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
-                  <div class="govuk-checkboxes__item">
+                  <summary class="summary-content govuk-!-margin-bottom-3 govuk-!-margin-top-3">
+                      <a href="#" class="govuk-link govuk-link--no-underline govuk-link--no-visited-state" onclick="toggleDetails('categoryDetails')">Category</a>
+                  </summary>
+                  <div class="scrollable-container">
+                      <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
+                            <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="organisation" name="organisation" type="checkbox" value="hmrc">
                     <label class="govuk-label govuk-checkboxes__label" for="organisation">
                       Electrical
