New start pages

--- a/app/views/layout-new-header.html
+++ b/app/views/layout-new-header.html
@@ -47,24 +47,23 @@
     containerClasses: "govuk-width-container"
   }) }}
 
-    <nav class="govuk-width-container">
-      <ul>
-        <li><a href="#" class="active">Notifications</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Businesses</a></li>
-        <li><a href="#">Risk assessments</a></li>
-        <li><a href="#">Account settings</a></li>
-        <li class="search">
-          <a href="#">
-            <img class="govuk-!-margin-right-1"  src="../../public/images/new-search.svg" alt="Tick">
-            Search database
-          </a>
-        </li>
-      </ul>
-      <hr class="govuk-section-break govuk-section-break--visible">
-    </nav>
-
-  
+  <nav class="govuk-width-container">
+    <ul>
+      <li><a href="#" class="active">Notifications</a></li>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">Businesses</a></li>
+      <li><a href="#">Risk assessments</a></li>
+      <li><a href="#">Account settings</a></li>
+      <li class="search" style="float: right;">
+        <a href="#">
+          <img class="govuk-!-margin-right-1 search-icon" src="../../public/images/new-search.svg" alt="Tick">
+          <span>Search database</span>
+        </a>
+      </li>
+    </ul>
+    <hr class="govuk-section-break govuk-section-break--visible">
+  </nav>
+    
 
   <div class="govuk-width-container govuk-phase-banner">
     <p class="govuk-phase-banner__content">
